# bigeon-rust

./: .gitignore  Cargo.toml  README.md
src/: https_client.rs  main.rs  request.rs
src/discord/: client.rs  message.rs
src/https/: canbeclient.rs  client.rs  https_client.rs  mod.rs  parse_http.rs  persistent_client.rs  request.rs  response.rs  url.rs
src/microsoft/: oauth2.rs  xboxlive.rs
src/minecraft/: microsoft_login.rs  mod.rs
src/minecraft/microsoft/: mod.rs  oauth2.rs  xboxlive.rs
