[package]
name = "bigeon-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
regex = "1.11.1"
rustls = "0.23.20"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.133"
serde_with = "3.11.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"]}
webpki-roots = "0.26.7"
